--- a/Index.css
+++ b/Index.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   font-family: "Times New Roman", Times, serif;
 }
-
+body {
+  background-image: url("https://source.unsplash.com/1600x900/?weather");
+}
 .Main_Container {
   background-color: #171717;
   color: white;
@@ -12,6 +14,7 @@
   width: 40%;
   margin: 4rem auto;
   border-radius: 10px;
+  opacity: 0.9;
 }
 .Weather__HeaderPart {
   display: flex;
